<resources>
    <string name="app_name">Unijem</string>
    <string name="login">Login</string>
    <string name="dialog_sure">Ok</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="login_check">Please input completely</string>
    <string name="dialog_empetycode">Please input verification code</string>
    <string name="dialog_errorcode">Err，please input again</string>
    <string name="success_send">Send successfully</string>
    <string name="wait">Please hold on</string>
    <string name="personal_setting">Personal Setting</string>
    <string name="home_page">Home Page</string>
    <string name="warning_notices">Warning Notices</string>
    <string name="system_setting">System Setting</string>
    <string name="learn_more">Learn More</string>
    <string name="new_version">New</string>
    <string name="modify_code">Modify Password</string>
    <string name="age">Age</string>
    <string name="dialog_btn_confim">Ok</string>
    <string name="dialog_btn_cancel">Cancel</string>
    <string name="dialog_title_alert">Tip</string>
    <string name="choose_device_type">Choose device type</string>
    <string name="add_battery_instruct">Instructions</string>
    <string name="some_device">Some device</string>
    <string name="password_hint">Input password</string>
    <string name="remember_password">Remember password</string>
    <string name="next">Next</string>
    <string name="connect">Connect</string>
    <string name="wifi_contect">Connecting to WLAN</string>
    <string name="folder_input_hint">Input name</string>
    <string name="addfolder">Add location</string>
    <string name="all_folders">All location</string>
    <string name="name_is_null">Name could not be NULL</string>
    <string name="content_is_null">Content count not be Null</string>
    <string name="password_is_null">Password could not be NULL</string>
    <string name="age_must_be_number">Age must be number</string>
    <string name="success_add">Add successfully</string>
    <string name="success_modify">Modification done successfully</string>
    <string name="success_delete">Delete successfully</string>
    <string name="success_Esptouch">Connecting to WLAN</string>
    <string name="success_move">Move successfully</string>
    <string name="delete_it_or_not">Are you sure you want to delete?</string>
    <string name="update_name">Update name</string>
    <string name="name_is_too_long">Name is too long</string>
    <string name="please_choose_ico">Please choose ICO</string>
    <string name="logout">Logout</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="battery_detail">Battery detail</string>
    <string name="loading_press">Loading..</string>
    <string name="switch_lan">Language</string>
    <string name="name_hint">Input email</string>
    <string name="reset_code">Reset Password</string>
    <string name="register">Register</string>
    <string name="battery_normal">Normal product</string>
    <string name="battery_alarm">Fire alarm</string>
    <string name="battery_lowvolt">Low voltage product</string>
    <string name="battery_trouble">Product failure</string>
    <string name="battery_silence">Alarm cancelled</string>
    <string name="battery_not_connect">Unconnected alarm</string>
    <string name="battery_lvolt_silence">Low volt silence</string>
    <string name="battery_test_alarm">Test OK</string>
    <string name="linkage_alarm">FROZEN_ALARM</string>
    <string name="battery_normal_content">Device working fine</string>
    <string name="battery_alarm_content">Fire detected.Please confirm and check the status and take appropriate actions.</string>
    <string name="water_alarm_content">Water leakage detected, please confirm and handle.</string>
    <string name="battery_lowvolt_content">The battery is low. Please change the battery as soon as possible. The battery type is CR123A.It will close push.</string>
    <string name="battery_trouble_content">The smoke alarm is out of order. Please check or replace the smoke alarm.</string>
    <string name="battery_silence_content">The smoke alarm is silent for 10 minutes, please pay special attention to it.</string>
    <string name="battery_not_connect_content">Please check if the Unijem battery has been properly installed.</string>
    <string name="battery_lvolt_silence_content">The smoke alarm is silent for 10 minutes, please pay special attention to it.</string>
    <string name="battery_test_alarm_content">Your device has been tested and is working properly.</string>
    <string name="water_test_alerm_content">Your device frozen alarm.</string>
    <string name="retry">Retry</string>
    <string name="esptouch_is_configuring">Configuring, please wait...</string>
    <string name="failed_Esptouch_check_eq">Fail, confirm device in config NET mode</string>
    <string name="failed_to_find_device">Fail to find device</string>
    <string name="pincode_get_err">Pincode get err</string>
    <string name="device_already_bind">This device has been binded</string>
    <string name="device_already_bind_to">This device has been bind to %1$s</string>
    <string name="net_err">NET err</string>
    <string name="put_to_folder_fail">Move failed</string>
    <string name="unbind_hint">Are u sure to unbind %1$s</string>
    <string name="self_bind">This device has been bind yourself</string>
    <string name="success_unbind">Unbind successfully</string>
    <string name="phone_hint">Please input phone number</string>
    <string name="please_input_email">Please input email</string>
    <string name="code_hint">Verification code</string>
    <string name="get_code">Get</string>
    <string name="setting_password_hint">Password</string>
    <string name="setting_confirm_password_hint">Password confirm</string>
    <string name="setting_new_password_hint">New password</string>
    <string name="setting_confirm_new_password_hint">New password confirm</string>
    <string name="modifying_newpassword">Modifying password..</string>
    <string name="modify_newpassword_success">Modify password success</string>
    <string name="modify_age">Modify age</string>
    <string name="code_fault">Password fault</string>
    <string name="phone_find">Phone find</string>
    <string name="email_find">Email find</string>
    <string name="success_reset">Success reset</string>
    <string name="please_input_complete">Please input completely!</string>
    <string name="please_input_phone">Please input phone number</string>
    <string name="password_length">Password at least 6 numbers!</string>
    <string name="password_two_different">Two password is different</string>
    <string name="email_sended">Rest successfully, please check mailbox</string>
    <string name="serve_instruction">Registration as agreed terms of service</string>
    <string name="phone_register">By phone</string>
    <string name="email_register">By email</string>
    <string name="input_graph">Please input graph</string>
    <string name="check_email">Success, please check mailbox</string>
    <string name="success_register">Register successfully</string>
    <string name="choose_language">Choose Language</string>
    <string name="battery_warning_his">Warnings history</string>
    <string name="warning_alert">Please pay attention,%1$s %2$s！</string>
    <string name="content_empty">No data now\nclick top right corner to add</string>
    <string name="all_pic">All pictures</string>
    <string name="pic_album">Album</string>
    <string name="no_one_pics">No picture at all</string>
    <string name="no_extern_storage">No external storage</string>
    <string name="pic">%1$d pics</string>
    <string name="should_you_just_one_pic">U only choose one picture</string>
    <string name="down_success">Download success</string>
    <string name="down_fail">Download failed</string>
    <string name="downing">Downloading</string>
    <string name="insert_card">Insert card</string>
    <string name="update_alert">Current Ver:%1$s,VerCode:%2$d,Find New Ver:%3$s,New VerCode:%4$d,Do you Want to Update?</string>
    <string name="start_lan">LAN Mode</string>
    <string name="clearup_cache">Clear cache</string>
    <string name="you_ask_i_answer_new">FAQ\’S</string>
    <string name="you_ask_i_answer">FAQ\’S</string>
    <string name="you_ask_i_answer_old">Q&amp;A</string>
    <string name="about">About</string>
    <string name="choose_pic">Where do you want to place the device?</string>
    <string name="input_name">Input name</string>
    <string name="device_normal">Device normal</string>
    <string name="fire_happen">Fire happen</string>
    <string name="low_volt">Low voltage</string>
    <string name="alarm_in_trouble">Alarm in trouble</string>
    <string name="alarm_already_cancel">alarm cancel</string>
    <string name="alarm_no_connect">Alarm disconnected</string>
    <string name="low_volt_silence">Low volt silence</string>
    <string name="test_normal">test normal</string>
    <string name="flood_alert">Water leakage</string>
    <string name="guide_note">Pull out the paper tab and click connect</string>
    <string name="guide_tip">If fail to find device，please take out the CR123A battery and load it after one minute, then click the retry</string>
    <string name="guide_fail_help">Need help?</string>
    <string name="app_version_hint">App Version</string>
    <string name="siterwell">Unijem</string>
    <string name="other_brand">Other Brand</string>
    <string name="choose_your_smoke">Choose Your Smoke</string>
    <string name="type_setting_success">Type Config Successfully</string>
    <string name="exit_hint">Again will exit %1$s</string>
    <string name="circle_mode">Circle</string>
    <string name="timer_mode">Timer</string>
    <string name="countdown_mode">CountDown</string>
    <string name="circle_on">Circle On(H:M)</string>
    <string name="circle_off">Circle Off(H:M)</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="circle_number">Circle Number</string>
    <string name="circle_no_limit">No Limit Circle</string>
    <string name="count_down_time">CountDown(H:M)</string>
    <string name="count_down_action">Action Off/On</string>
    <string name="count_down_notice">Phone Notice</string>
    <string name="switch_to">to</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="are_u_sure_to_delete">Are u sure to delete?</string>
    <string name="week">Week</string>
    <string name="please_choose_action">Please Choose Action</string>
    <string name="please_choose_switch_time">Please Choose Switch Time(HH:mm)</string>
    <string name="please_choose_notice_or_notice">Please Choose Phone Notice Or Not</string>
    <string name="save">Save</string>
    <string name="add_timer">Add timer</string>
    <string name="edit_timer">Edit timer</string>
    <string name="set_weekday">Please Set WeekDay</string>
    <string name="no_notice">No-notice</string>
    <string name="notice">Notice</string>
    <string name="duli_socket_switch">Socket switch!</string>
    <string name="folder_name">Location name</string>
    <string name="firmware_version">Bin Ver</string>
    <string name="device_name">Device Name</string>
    <string name="device_id">Device Id</string>
    <string name="bin_type">Bin Type</string>
    <string name="wator_guide_text">The battery is loaded into the equipment, equipment to be confirmed in the connection state</string>
    <string name="wator_guide_text2">1.Light is not lit: \nRemove the battery after ten seconds retry</string>
    <string name="wator_guide_text3">2.Light is lit: \nPlease click “CONNECT”</string>
    <string name="wifi_config">Wi-Fi Set-up</string>
    <string name="wifi_config_placeholder">Open Wi-Fi and Connect device</string>
    <string name="scan">Scan</string>
    <string name="scan_placeholder">Scan QR code</string>
</resources>