<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainGround"
    >

    <ImageView
        android:layout_width="208dp"
        android:layout_height="266dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/guide_water"/>

    <TextView
        android:text="@string/wator_guide_text"
        android:textSize="@dimen/NormalTextSize"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/LargePadding"
        android:paddingRight="@dimen/LargePadding"
        android:layout_below="@id/guide_water"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:id="@+id/d"/>

    <TextView
        android:text="@string/wator_guide_text2"
        android:textSize="@dimen/NormalTextSize"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/LargePadding"
        android:paddingRight="@dimen/LargePadding"
        android:layout_below="@id/d"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:id="@+id/e"/>

    <TextView
        android:text="@string/wator_guide_text3"
        android:textSize="@dimen/NormalTextSize"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/LargePadding"
        android:paddingRight="@dimen/LargePadding"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:layout_below="@id/e"/>

    <Button
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:id="@+id/conect_water"
        android:text="@string/connect"
        style="@style/comon_btn_style" />
</RelativeLayout>
