<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/mainGround">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/liner_phone">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/white"
            android:padding="@dimen/NormalPadding"
            android:gravity="center_vertical">
            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_hint"
                android:background="@null"
                android:textColorHint="@color/text_desc"
                android:inputType="phone" />
        </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/mainGround"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/white"
            android:padding="@dimen/NormalPadding">
            <EditText
                android:id="@+id/et_code"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/code_hint"
                android:background="@null"
                android:textColorHint="@color/text_desc"
                android:inputType="number" />
            <Button
                android:id="@+id/btn_get_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/common_btn_bg"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:text="@string/get_code" />
        </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/mainGround"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/white"
            android:padding="@dimen/NormalPadding"
            android:gravity="center_vertical">
            <com.siterwell.demo.commonview.CodeEdit
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/code1"
                app:code_can_see="false"
                app:hint_text="@string/setting_new_password_hint"/>

        </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/mainGround"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/white"
            android:padding="@dimen/NormalPadding"
            android:gravity="center_vertical">

            <com.siterwell.demo.commonview.CodeEdit
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/code2"
                app:code_can_see="false"
                app:hint_text="@string/setting_confirm_new_password_hint"/>

        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/liner_email"
        android:visibility="gone">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/white"
            android:padding="@dimen/NormalPadding"
            android:gravity="center_vertical">
            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:textColorHint="@color/text_desc"
                android:hint="@string/please_input_email" />
        </LinearLayout>
    </LinearLayout>


    <Button
        android:id="@+id/btn_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/NormalPadding"
        android:layout_marginLeft="@dimen/NormalPadding"
        android:layout_marginRight="@dimen/NormalPadding"
        android:background="@drawable/common_btn_bg"
        android:textAllCaps="false"
        android:text="@string/reset_code"
        android:textColor="@color/white"/>


</LinearLayout>
