<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@color/mainGround">

    <com.siterwell.demo.commonview.RoundProgressView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:id="@+id/roundprogress"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tishi"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tip"
        android:visibility="visible"
        android:text="@string/guide_tip"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tip2"
        android:visibility="gone"
        android:text="@string/guide_fail_help"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"/>

    <Button
        android:textAllCaps="false"
        android:id="@+id/retry"
        android:text="@string/retry"
        android:textSize="@dimen/LargTextSize"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/common_btn_bg"
        android:visibility="gone"
        android:textColor="@color/white"/>
</LinearLayout>