<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainGround">

    <RelativeLayout android:layout_width="match_parent"
                  android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:id="@+id/wifi_btn">
        <ImageView android:layout_height="80dp"
                   android:layout_width="80dp"
                   android:src="@mipmap/icon_wifilogo"
                   android:layout_centerVertical="true"
            android:layout_marginLeft="30dp"
                   android:id="@+id/wifi_ico"
                 />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dp"
            android:layout_toRightOf="@id/wifi_ico">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi_config"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi_config_placeholder"/>
        </LinearLayout>

    </RelativeLayout>
    <RelativeLayout android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:id="@+id/scan_btn">
        <ImageView android:layout_height="80dp"
            android:layout_width="80dp"
            android:src="@mipmap/icon_twologo"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dp"
            android:id="@+id/scan_ico"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dp"
            android:layout_toRightOf="@id/scan_ico">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scan"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scan_placeholder"/>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>