<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/mainGround">




    <!--android:background="@drawable/common_btn_bg"-->
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/select_icon_button_color"
        android:text="@string/dialog_btn_confim"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:textColor="@color/white"
        android:id="@+id/addFolder"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:id="@+id/re_edit"
        android:layout_above="@id/addFolder">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/NormalTextSize"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="15dp"
            android:text="@string/folder_name"
            android:id="@+id/ddd"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@id/ddd"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:id="@+id/foldername"
            android:background="@null"
            android:hint="@string/folder_input_hint"
            android:singleLine="true"
            android:textColorHint="@color/devices_offline"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/re_edit"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/NormalTextSize"
            android:gravity="center"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/choose_pic"
            android:id="@+id/sle"/>

        <GridView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:numColumns="2"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@null"
            android:horizontalSpacing="10dp"
            android:verticalSpacing="10dp"
            android:layout_below="@id/sle"
            android:id="@+id/icos"/>
    </RelativeLayout>
</RelativeLayout>